# CppTemplateCustomConditions

./: CMakeLists.txt
include/: custom_concepts.hpp  custom_template_conditions.hpp
src/: custom_concepts.hpp  main.cpp  template_conditions.hpp  use_case_examples.hpp
